--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,7 +41,7 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        []
+    bundles:        [EasanlesAtletismoBundle]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
