--- a/src/Easanles/AtletismoBundle/Resources/config/routing.yml
+++ b/src/Easanles/AtletismoBundle/Resources/config/routing.yml
@@ -123,12 +123,7 @@ comprobar_usuario:
       id: \d+
 historial_atleta:
    path: /admin/atletas/{id}/historial
-   defaults: {_controller: "EasanlesAtletismoBundle:Atleta:historialAtleta", vista: "extendido"}
-   requirements:
-      id: \d+
-historial_atleta_compacto:
-   path: /admin/atletas/{id}/historial/compacto
-   defaults: {_controller: "EasanlesAtletismoBundle:Atleta:historialAtleta", vista: "compacto"}
+   defaults: {_controller: "EasanlesAtletismoBundle:Atleta:historialAtleta"}
    requirements:
       id: \d+
    
