--- a/src/Easanles/AtletismoBundle/Resources/config/routing.yml
+++ b/src/Easanles/AtletismoBundle/Resources/config/routing.yml
@@ -242,11 +242,16 @@ resultados_intentos:
 #----------------------Records-----------------------
 pantalla_records_masc:
    path: /admin/records/masculinos
-   defaults: {_controller: "EasanlesAtletismoBundle:Informes:pantallaRecords", tipo: 0, rol: "admin"}
+   defaults: {_controller: "EasanlesAtletismoBundle:Informes:pantallaRecords", tipo: 0, rol: "admin", id: null}
 pantalla_records_fem:
    path: /admin/records/femeninos
-   defaults: {_controller: "EasanlesAtletismoBundle:Informes:pantallaRecords", tipo: 1, rol: "admin"}
-
+   defaults: {_controller: "EasanlesAtletismoBundle:Informes:pantallaRecords", tipo: 1, rol: "admin", id: null}
+pantalla_records_atleta:
+   path: /admin/atletas/{id}/records
+   defaults: {_controller: "EasanlesAtletismoBundle:Informes:pantallaRecords", tipo: 3, rol: "admin"}
+   requirements:
+      id: \d+
+      
 #---------------------Asistencia---------------------
 pantalla_asistencia:
    path: /admin/informes/asistencia
@@ -372,13 +377,13 @@ users_crear_intento:
 #======================RECORDS=======================
 users_pantalla_records_masc:
    path: /records/masculinos
-   defaults: {_controller: "EasanlesAtletismoBundle:Informes:pantallaRecords", tipo: 0, rol: "user"}
+   defaults: {_controller: "EasanlesAtletismoBundle:Informes:pantallaRecords", tipo: 0, rol: "user", id: null}
 users_pantalla_records_fem:
    path: /records/femeninos
-   defaults: {_controller: "EasanlesAtletismoBundle:Informes:pantallaRecords", tipo: 1, rol: "user"}
+   defaults: {_controller: "EasanlesAtletismoBundle:Informes:pantallaRecords", tipo: 1, rol: "user", id: null}
 users_pantalla_records_propios:
    path: /records/misrecords
-   defaults: {_controller: "EasanlesAtletismoBundle:Informes:pantallaRecords", tipo: 2, rol: "user"}
+   defaults: {_controller: "EasanlesAtletismoBundle:Informes:pantallaRecords", tipo: 2, rol: "user", id: null}
 
 
 #=======RESULTADOS CON COMPETICIONES OCULTAS=========
