Incorporar Licencia MIT

--- a/src/Easanles/AtletismoBundle/Resources/config/routing.yml
+++ b/src/Easanles/AtletismoBundle/Resources/config/routing.yml
@@ -1,4 +1,6 @@
 
+# Copyright (c) 2016 Eduardo Alonso Sanlés
+# Licensed under the MIT license: http://www.opensource.org/licenses/mit-license.php
 
 #####################################################
 ################### ADMINISTRACION ##################
